[gd_scene load_steps=54 format=2]

[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Walk D.png" type="Texture" id=1]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Walk R.png" type="Texture" id=2]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Walk U.png" type="Texture" id=3]
[ext_resource path="res://Player/Player.gd" type="Script" id=4]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Walk L.png" type="Texture" id=5]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Hurt R.png" type="Texture" id=6]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Hurt D.png" type="Texture" id=7]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Hurt U.png" type="Texture" id=8]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Hurt L.png" type="Texture" id=9]
[ext_resource path="res://Audio/Sfx/Player/Hurt01.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Sfx/Player/Death02.wav" type="AudioStream" id=11]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Death.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Instances/Weapon.tscn" type="PackedScene" id=13]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Attack D.png" type="Texture" id=14]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Attack L.png" type="Texture" id=15]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Attack R.png" type="Texture" id=16]
[ext_resource path="res://Textures/Characters/HEROS/HEROS8bit_Adventurer Attack U.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 12 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 17 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 14 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 15 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 16 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 28 ), SubResource( 27 ), SubResource( 26 ) ],
"loop": false,
"name": "Death",
"speed": 3.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Walk_Down",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Walk_Left",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "Hurt_Right",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk_Up",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "Hurt_Down",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Attack_Up",
"speed": 10.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "Hurt_Up",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "Attack_Down",
"speed": 10.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "Hurt_Left",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Walk_Right",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ) ],
"loop": false,
"name": "Attack_Left",
"speed": 10.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": false,
"name": "Attack_Right",
"speed": 10.0
} ]

[sub_resource type="Animation" id=25]
resource_name = "Death"
tracks/0/type = "audio"
tracks/0/path = NodePath("../AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=24]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Hurt_Right", "Walk_Right" ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CapsuleShape2D" id=29]
radius = 3.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=30]
radius = 6.0
height = 0.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 4 )
animation_node_path = NodePath("SpecialAnimations")

[node name="Weapon" parent="." instance=ExtResource( 13 )]
position = Vector2( 0, 3 )
scale = Vector2( 0.85, 0.85 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "Walk_Down"

[node name="SpecialAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Death = SubResource( 25 )
anims/Hurt = SubResource( 24 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
mix_target = 2

[node name="Walkbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 29 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="Collision2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 3 )
shape = SubResource( 30 )

[connection signal="attack_finished" from="Weapon" to="." method="_on_Weapon_attack_finished"]
[connection signal="animation_finished" from="SpecialAnimations" to="." method="_on_SpecialAnimations_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
